--- a/Coding Challenges/ForLoop.html
+++ b/Coding Challenges/ForLoop.html
@@ -6,63 +6,18 @@
     <title>Document</title>
 </head>
 <body>
-   <script>
-     //For loop
-   //   let x;
-   //   for(x=2;x<=4;x++){
-   //      console.log(x);
-   //   }
-
-     //Iterating over Arrays
-   //   let numbers = [1,2,3,4,5,6,7,8];
-   //   for(i=0; i<numbers.length;i++){
-   //    console.log(numbers[i]);
-   //   }
-
-     //Reverse a string
-   //   function reverseString(str){
-   //       let reversed ='';
-   //       for(i=str.length-1; i>=0; i--){
-   //         reversed = reversed + str[i];
-   //       }
-   //       return reversed
-   //   }
-   //    console.log(reverseString("HELLO"));
-
-      //Nexted for loops
-      // for(let i=0;i<3;i++){
-      //    for(let j=0; j<3; j++){
-      //       console.log(`i: ${i}, j:${j}`);
-      //    }
-      // }
-
-      //loop with break
-
-      // for(let i=0; i<5; i++){
-      //    if(i==3){
-      //       break;
-      //    }
-      //    console.log(i);
-      // }
-
-      //Loop with continue
-      for(let i=0; i<10; i++){
-         if(i % 2  === 0){
-            continue;
-         }
-         console.log(i);
-      }
-
-      //for in
-
-      const person ={
-         name:"Rakesh",
-         age:30,
-         location:"Bangalore"
-      }
-      for (const key in person) {
-         console.log(`${key} : ${person[key]} `);
-      }
-   </script>
+    <script>
+        function printValue(arr){
+            console.log(arr.length)
+            for(i=0; i<arr.length; i++ ){
+                console.log(arr[0].length)
+                for(j=0; j<arr[0].length; j++){
+                    console.log(arr[i][j])
+                }
+            }
+        }
+    const arr = [[1,2], [3,4], [5,6]];
+    printValue(arr)
+    </script>
 </body>
 </html>
