--- a/Coding Challenges/HigherOrderFunction.html
+++ b/Coding Challenges/HigherOrderFunction.html
@@ -9,6 +9,9 @@
     <script>
         //Higher Order Function
         //A function which takes another function as an argument or returns a function from it.
+        //Asynchronous Programming, Flexibility and Reusability, Control Flow Management
+        //Callback Hell, Difficulty in Managing Flow, Error Handling Challenges, 
+
         const radius = [1,2,3,4,5];
         const area = function(radius){
             return Math.PI*radius*radius
