--- a/Coding Challenges/28Nov2024.html
+++ b/Coding Challenges/28Nov2024.html
@@ -81,6 +81,8 @@
             console.log(arguments[0], arguments[1]);
         }
         foo(3)
+
+        //upto 20 Questions
     </script>
 </body>
 </html>
