--- a/RoadsideCoder/mapfilterreduce.html
+++ b/RoadsideCoder/mapfilterreduce.html
@@ -30,6 +30,7 @@
         Array.prototype.myMap = function(cb){
             let temp = [];
             for (let i =0; i<this.length; i++){
+                console.log(this);
                 temp.push(cb(this[i], i, this))
             }
             return temp;
@@ -68,6 +69,8 @@
             return acc + curr
         }, 0);
         console.log(sum);
+
+        
     </script>
 </body>
 </html>
